--- a/css/custom.css
+++ b/css/custom.css
@@ -8,16 +8,16 @@
         background: #fff;
         padding: 20px 25px;
         margin: 30px 0;
-		border-radius: 3px;
+		    border-radius: 3px;
         box-shadow: 0 1px 1px rgba(0,0,0,.05);
     }
-	.table-title {        
+	.table-title {
 		padding-bottom: 15px;
 		background: #435d7d;
 		color: #fff;
-		padding: 16px 30px;
+		padding: 10px;
 		margin: -20px -25px 10px;
-		border-radius: 3px 3px 0 0;
+		border-radius: 20px;
     }
     .table-title h2 {
 		margin: 5px 0 0;
@@ -67,7 +67,7 @@
         font-size: 13px;
         margin: 0 5px;
         cursor: pointer;
-    }	
+    }
     table.table td:last-child i {
 		opacity: 0.9;
 		font-size: 22px;
@@ -115,11 +115,11 @@
     }
     .pagination li a:hover {
         color: #666;
-    }	
+    }
     .pagination li.active a, .pagination li.active a.page-link {
         background: #03A9F4;
     }
-    .pagination li.active a:hover {        
+    .pagination li.active a:hover {
         background: #0397d6;
     }
 	.pagination li.disabled i {
@@ -133,12 +133,12 @@
         float: left;
         margin-top: 10px;
         font-size: 13px;
-    }    
+    }
 	/* Custom checkbox */
 	.custom-checkbox {
 		position: relative;
 	}
-	.custom-checkbox input[type="checkbox"] {    
+	.custom-checkbox input[type="checkbox"] {
 		opacity: 0;
 		position: absolute;
 		margin: 5px 0 0 3px;
@@ -213,7 +213,7 @@
 	.modal .btn {
 		border-radius: 2px;
 		min-width: 100px;
-	}	
+	}
 	.modal form label {
 		font-weight: normal;
-	}	
+	}
